# libirrun

./: CMakeLists.txt  README.md  irrun.cc  irrun.h
test/: CMakeLists.txt  main.c  prime.c  strlen.c
